include $(top_srcdir)/Makefile.vars
include $(top_srcdir)/Makefile.rules

internet_drafts = \
   draft-ietf-tsvwg-sctpimpguide-16.txt \
   draft-ietf-tsvwg-sctpsocket-11.txt \
   draft-ietf-tsvwg-addip-sctp-13.txt

rfcs = rfc2960.txt rfc3309.txt rfc3257.txt rfc3286.txt rfc3758.txt 

EXTRA_DIST += $(rfcs) $(internet_drafts)
