include $(top_srcdir)/Makefile.vars
include $(top_srcdir)/Makefile.rules

internet_drafts = \
   draft-ietf-tsvwg-sctpsocket-14.txt \
   draft-ietf-tsvwg-addip-sctp-15.txt

rfcs = rfc2960.txt rfc3309.txt rfc3257.txt rfc3286.txt rfc3758.txt \
       rfc3873.txt rfc4460.txt 

EXTRA_DIST += $(rfcs) $(internet_drafts)
