include $(top_srcdir)/Makefile.vars
include $(top_srcdir)/Makefile.rules

internet_drafts = \
	draft-stewart-tsvwg-sctpipv6-00.txt \
	draft-stewart-tsvwg-sctpscore-01.txt

rfcs = rfc2960.txt rfc3257.txt rfc3286.txt rfc3309.txt rfc3554.txt \
       rfc3758.txt rfc3873.txt rfc4460.txt rfc4820.txt rfc4895.txt \
       rfc4960.txt rfc5061.txt rfc5062.txt rfc6458.txt

EXTRA_DIST += $(rfcs) $(internet_drafts)
