# -*- Makefile -*-
#
include $(top_srcdir)/Makefile.vars
include $(top_srcdir)/Makefile.rules

man7_MANS = sctp.7

man3_MANS = sctp_bindx.3 sctp_getladdrs.3 sctp_getpaddrs.3 sctp_opt_info.3 \
	sctp_peeloff.3 sctp_recvmsg.3 sctp_sendmsg.3 sctp_connectx.3 \
	sctp_send.3 sctp_sendv.3 sctp_recvv.3

EXTRA_DIST += $(man3_MANS) $(man7_MANS)
